# hamburger-transplant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
configs/: dual_organ.json  single_code.json  triple_organ.json
hamburger_transplant/: __init__.py  model.py  utils.py
paper/: hamburger_transplant.tex  hamburger_transplant_ja.md
scripts/: benchmark_fair.py  download_weights.py  train_code_stitching.py  train_math_stitching.py
